--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pubyf",
+  "name": "pugyf",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,8 +17,11 @@
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
+    "node-sass": "^4.14.1",
+    "pug": "^3.0.0",
+    "pug-html-loader": "^1.1.5",
+    "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^9.0.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
