--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.6.5",
+    "echarts": "^4.8.0",
+    "js-md5": "^0.7.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
